--- a/treemap/css/styleSheet.css
+++ b/treemap/css/styleSheet.css
@@ -1,4 +1,20 @@
-#container {
+#container1 {
+    min-width: 40%;
+    max-width: 80%;
+    min-height:50vw;
+    max-height:60vw;
+    margin: 0 auto;
+}
+
+#container2 {
+    min-width: 40%;
+    max-width: 100%;
+    min-height:50vw;
+    max-height:75vw;
+    margin: 0 auto;
+}
+
+#container3 {
     min-width: 40%;
     max-width: 100%;
     min-height:50vw;
