--- a/treemap/css/styleSheet.css
+++ b/treemap/css/styleSheet.css
@@ -1,4 +1,4 @@
-#container1 {
+#tmp1 {
     min-width: 40%;
     max-width: 80%;
     min-height:50vw;
@@ -6,7 +6,7 @@
     margin: 0 auto;
 }
 
-#container2 {
+#tmp2 {
     min-width: 40%;
     max-width: 100%;
     min-height:50vw;
@@ -14,7 +14,7 @@
     margin: 0 auto;
 }
 
-#container3 {
+#tmp3 {
     min-width: 40%;
     max-width: 100%;
     min-height:50vw;
